--- a/index.html
+++ b/index.html
@@ -3,47 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <title>Hello World</title>
-  
-    <!-- Load React. -->
-    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-
-    <!-- Load babel -->
-    <script src="https://unpkg.com/babel-standalone@6/babel.min.js" crossorigin></script>
-  
   </head>
   <body>
-    <p>
-      This is the first comment.
-      <!-- We will put our React component inside this div. -->
-      <div class="like_button_container" data-commentid="1"></div>
-    </p>
 
-    <p>
-      This is the second comment.
-      <!-- We will put our React component inside this div. -->
-      <div class="like_button_container" data-commentid="2"></div>
-    </p>
-
-    <p>
-      This is the third comment.
-      <!-- We will put our React component inside this div. -->
-      <div class="like_button_container" data-commentid="3"></div>
-    </p>
-
-    <div id="like_button_container"></div>
-    <script src="./dist/like_button.js"></script>
-
-    <div id="root"></div>
-    <script src="./dist/root.js"></script>
-
-    <div id="test_div"></div>
-    <script src="./src/importModule.js" type="module"></script>
-  
-    <script src="./src/exportModule2.js" type="module"></script>
-
-    <script src="./src/exportModule2.js" type="module"></script>
+  <script src="src/test.js">
     
+
+    
+  </script>
+  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.3.0/lodash.js"></script>
+  
+  <script>
+
+  </script>
+
+
   </body>
 </html>
