--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <title>Hello World</title>
   </head>
   <body>
+  <h1 id="greeting">Hello</h1>
 
-  <script src="src/test.js">
-    
 
-    
-  </script>
+
+  <!-- get dojo -->
+  <script src="//ajax.googleapis.com/ajax/libs/dojo/1.10.4/dojo/dojo.js" data-dojo-config="async: true"></script>
+
+  <script  type="module" src="src/moduleB.js"></script>
+  <script  type="module" src="src/importModule.js"></script>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.3.0/lodash.js"></script>
   
