--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <script  type="module" src="src/moduleB.js"></script>
   <script  type="module" src="src/importModule.js"></script>
+  <script src="src/script1.js"></script>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.3.0/lodash.js"></script>
   
